# praktikum-lib

./: .gitignore  TODO.txt  function_analysis.py  pyproject.toml  requirements.txt
equations/: derivatives.py
graph_fit/: FitResult.py  test.ipynb
praktikum-lib/: function_analysis.py  graph.py  myutil.py
praktikum-lib/equations/: __init__.py  handle_latex.py  markdown.py
praktikum-lib/graph_fit/: __init__.py  least_squares.py  models.py  orthogonal_distance.py
praktikum-lib/structs/: __init__.py  point.py
src/batfloman_praktikum_lib/: __init__.py  flags.py  function_analysis.py  graph.py  graph_old.py  path_managment.py  saving.py  util.py
src/batfloman_praktikum_lib.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/batfloman_praktikum_lib/equations/: handle_latex.py
src/batfloman_praktikum_lib/graph/: __init__.py  adapter_measurement.py  adapter_pandas.py  helpers.py  helpers.pyi  plotNScatter.py  plotNScatter.pyi  (+8 more)
src/praktikum_lib/: __init__.py
structs/: dataset.py  measurement.py  test.ipynb
tables/: __init__.py  tables.py
testing/: fitcache.json  test.py
tests/: __init__.py  generate_mock_data.py  test_1.py  test_flags.py  test_path_managment.py
tests/graph/: test_plot_dispatch.py  test_plot_func_fit_label.py  test_quick_methods.py  test_scatter_data_interval.py  test_scatter_dispatch.py
tests/graph_fit/: cache.json  chace.json  test_composition.py  test_find_init_params.py  test_scalar_model_evaluation.py
tests/io/: test_formatters.py
tests/significant_rounding/: test_sig_digit.py
tests/structs/: test_rendering_robustness.py
(+129 files in other folders)
