[project]
name = "batfloman_praktikum_lib"
version = "0.1.0"
description = "My test package"
authors = [{ name = "Florian Hirche" }]
dependencies = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }  # <-- Ensure correct syntax
