[project]
name = "batfloman-praktikum-lib"
version = "0.2.8.2.1"
description = "Library for scientific measurements and data analysis"
authors = [{ name = "Florian Hirche" }]
readme = "README.md"
license = { text = "MIT" }
dependencies = [
	"numpy",
	"scipy",
	"matplotlib",
	"pandas",
	"openpyxl",
	"pyqtgraph",
	"PyQt6",
]

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.package-data]
"batfloman_praktikum_lib" = ["*.pyi"]
